@@ -2,7 +2,8 @@
 
     * src/object/o_path_object.c: Rename Doxygen with the geda prefix.
 
-    * src/object/o_picture_object.c: Rename Doxygen with the geda prefix.
+    * src/object/o_picture_object.c: Rename Doxygen with the geda prefix
+      and update geda_picture_object_scale function documentation.
 
 2020-07-21 Wiley E. Hill <wileyhill@gmail.com>
 
